test/parser/channel/007.stderr
At: "007.hac":3:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	(null) 
#STATE#	(null) 
#STATE#	keyword: defchan [3:1..7]
#STATE#	identifier: mychan [3:9..14]
#STATE#	<: [3:16]
#STATE#	(chan-type) [3:19..28]
#STATE#	( [3:30]
#STATE#	(type-ref) [3:31..33]
#STATE#	) [3:34]
in state #STATE#, possible rules are:
	port_base_data_type_ref : base_data_type_ref . optional_chan_dir  (#RULE#)
	optional_chan_dir : .  (#RULE#)
acceptable tokens are: 
	'!' (shift)
	'?' (shift)
	ID (reduce)
