test/parser/channel/007.hac
// "007.hac" should fail, data port members need name

defchan mychan <: chan(bool) (int);

